fix overflow pages in rulebook.

--- a/website_css.css
+++ b/website_css.css
@@ -1,18 +1,98 @@
-/* -- CSS Comment syntax -- */
-
-/* -- NAVIGATION SIDEBAR -- */
+/* -- LAYOUT -------------------------------------------------------------------
+ *    page layout for navigation and content */
+.container {
+    display: grid;
+    grid-template-areas: 'nav content';
+    grid-template-columns: 230px 1fr;
+    grid-gap: 10px;
+    padding: 10px;
+}
 .nav {
+    grid-area: nav;
 	height: 100%;
 	width: 220px;
 	position: fixed;
-	z-index: 1;
 	top: 0;
 	left: 0;
-	background-color: white;
 	background-image: url("images/general/BG_Banner.png");
 	background-repeat: no-repeat;
-	padding-top: 20px;
-	overflow: auto;
+}
+.content {
+    grid-area: content;
+    margin-left: auto;
+    margin-right: auto;
+	max-width: 900px;
+    padding-bottom: 100px;
+}
+
+/* -- GENERAL ELEMENT STYLES ---------------------------------------------------
+ *    Used for consistency across all pages. */
+body {
+	text-align: justify;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-size: 14px;
+}
+h2 {
+	text-align: center;
+    border-bottom: 1px solid black;
+}
+h3 {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+h4 {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+ul {
+    margin-top: 0;
+    padding-top: 0;
+}
+img {
+    /* center and shrink images to fit */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+table {
+    width: 100%;
+    table-layout: fixed;
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, tr, td {
+    padding-left: 5px;
+    border: 1px solid black;
+}
+
+/* -- CLASS OVERRIDES ----------------------------------------------------------
+ *    can be combined as needed to get a particular effect */
+.note {
+    margin-bottom: 0px;
+    margin-top: 5px;
+    margin-left: 20px;
+}
+.w10 { width: 10%; }
+.w20 { width: 20%; }
+.w30 { width: 30%; }
+.w50 { width: 50%; }
+.w60 { width: 60%; }
+.w80 { width: 80%; }
+.img2 { width: 220px; }
+.img3 { width: 300px; }
+.img4 { width: 400px; }
+.img5 { width: 500px; }
+.caption {
+    font-style: italic;
+    text-align: center;
+}
+
+/* -- NAVIGATION SIDEBAR (on the left) -- */
+.nav {
+    padding-top: 30px;
+	background-image: url("images/general/BG_Banner.png");
+	background-repeat: no-repeat;
 }
 .nav button:hover {
 	background-image: url("images/general/Button_Hovered.jpg");
@@ -44,82 +124,67 @@
     background-image:url("images/general/Button_Picked.jpg");
 }
 
-/* -- BASE SETTINGS -- */
-p, i, li, th, tr, td {
-	text-align: justify;
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	font-size: 12px;
+/* -- HOME PAGE -- */
+.homepage-table {
+    width: 100%;
+    table-layout: fixed;
+    margin-bottom: 50px;
 }
-table, th, tr, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-        text-align: center;
-        margin: auto;
-}
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
-}
-.centered {
-    text-align: center;
-}
-.note {
-    font-style: bold;
-}
-.setting {
-    font-style: italic;
-}
-.list-steps {
-    list-style-type: upper-alpha;
-}
-.logo {
-    width: 300px;
-}
-.box {
-	float: left;
-	width: 8px;
-	height: 8px;
-	margin: 2px;
-	border: 1px solid black;
+.homepage-table th {
+	font-size: 14px;
+    font-weight: bold;
+    padding: 10px;
 }
 
+/* -- BOOK PAGE ----------------------------------------------------------------
+ *    content that is displayed in 1 or 2 columns and with a page background.
+ *    These do not resize to smaller sizes well and will need a mobile style
+ *    in the future. */
+.bookpage {
+    height: 1150px;
+	text-align: justify;
+    background-image: url('images/rulebook/page-background.png');
+    background-repeat:no-repeat;
+    background-size: 900px 1150px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.bookpage-columns {
+    display: flex;
+    align-items: flex-end;
+}
+.bookpage-column {
+    flex: 50%;
+    align-self:stretch;
+    padding: 15px;
+}
+.bookpage h1 {
+    /* center the text on the background title area */
+    padding-top: 35px;
+	font-size: 24px;
+    text-align: center
+}
+.bookpage table {
+    margin: auto;
+}
+.bookpage th {
+    background-color: #AB8C70;
+}
+.bookpage tr:nth-child(even) {
+    background-color: #DCD1C4;
+}
+
+/*
+
 /* -- MAIN PAGES -- */
-.page-container {
-  display: grid;
-  grid-template-areas: 'nav main';
-  grid-template-columns: 230px 1fr;
-  grid-gap: 10px;
-  padding: 10px;
-}
-.spacing {
-    padding-top:100px;
-}
-.nav { grid-area: nav; }
-.content {
-    grid-area: main;
-    margin-left: auto;
-    margin-right: auto;
-}
-.content h2 {
-	text-align: center;
-}
-.content h3 {
-	text-align: center;
-    border-bottom: 2px solid black;
-}
-.content hr {
-    border: 1px thin;
-    margin-top 10px;
-    margin-bottom 10px;
-}
+/*
 .content-page {
 	max-width: 800px;
     height: 1000px;
 }
 
 /* -- WORLDLORE  Pages and Chapters -- */
+/*
 table.creature {
     width: 100%;
     margin-bottom: 20px;
@@ -141,6 +206,7 @@ table.creature td:last-child {
 }
 
 /* -- ADVENTURE  Pages and Chapters -- */
+/*
 .adventure {
     position: relative;
 }
@@ -157,6 +223,7 @@ table.creature td:last-child {
 }
 
 /* -- STORY Pages and Chapters -- */
+/*
 .story-chapter {
 	max-width: 800px;
     display:block;
@@ -165,109 +232,4 @@ table.creature td:last-child {
 .story-chapter img {
     border: 1px solid;
 }
-
-/* -- BOOK PAGE -- */
-.bookpage {
-	max-width: 800px;
-    height: 1000px;
-	text-align: justify;
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	font-size: 12px;
-    background-image: url('images/rulebook/page-background.png');
-    background-repeat:no-repeat;
-    background-size: 800px 1000px;
-}
-.bookpage p {
-    display: block;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top:0;
-    margin-top:0;
-}
-.bookpage img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-}
-.bookpage h1 {
-    padding-top: 25px;
-	font-size: 24px;
-    text-align: center
-}
-.bookpage h2 {
-	font-size: 18px;
-    text-align: center
-}
-.bookpage h3 {
-	font-size: 14px;
-    padding-left: 18px;
-    padding-top: 10px;
-    margin: 0px;
-    border: none;
-	text-align: left;
-}
-.bookpage h4, .bookpage h5 {
-	font-size: 12px;
-    padding-left: 18px;
-    padding-top: 10px;
-    margin: 0px;
-}
-.bookpage-columns {
-    display: flex;
-    align-items: flex-end;
-}
-.bookpage-column {
-    flex: 50%;
-    padding: 20px;
-    align-self:stretch;
-}
-.img-caption {
-    font-style: italic;
-    text-align: center;
-}
-.caption {
-    font-style: italic;
-    text-align: center;
-}
-
-table.wide {
-    width: 90%;
-    text-align: center;
-    margin: auto;
-    border-collapse: collapse;
-}
-table.wide td, table.wide th {
-    text-align: center;
-	width:10%;
-}
-table.wide tr:first-child {
-    background-color: #AB8C70;
-}
-table.wide tr:nth-child(even) {
-    background-color: #DCD1C4;
-}
-table.skills caption {
-    background-color: #AB8C70;
-    padding: 3px;
-}
-table.skills {
-    width: 100%;
-    table-layout: auto;
-    margin-bottom: 15px;
-}
-table.skills td {
-    text-align: left;
-}
-table.skills td:first-child {
-    font-weight: bold;
-    width: 28%;
-}
-table.skills td:last-child {
-    width: 72%;
-}
-table.skills tr.separator {
-    height: 5px;
-    background-color: #AB8C70;
-}
+*/
